--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         </script>
     </div>
     <div class="container">
-        <h1>ColorStack @ Ohio State Website Coming Soon</h1>
-        <p>Our digital home is in the works. Get ready to connect, learn, and grow with us!</p>
+        <h1>ColorStack @ Ohio State Website</h1>
+        <p>Coming Soon</p>
     </div>
 </body>
 </html>
