--- a/index.html
+++ b/index.html
@@ -1,142 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon | ColorStack at OSU</title>
-  <style>
-    /* Reset & Base */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      /* Subtle gradient with a smoother blend */
-      background: radial-gradient(circle at center, #c22e2e 0%, #8b1e1e 100%);
-      color: #ffffff;
-      overflow: hidden;
-      position: relative;
-      padding: 20px;
-    }
-
-    /* Container Styles */
-    .container {
-      position: relative;
-      z-index: 2;
-      /* Slightly transparent glass effect with backdrop filter */
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(10px);
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      padding: 40px 30px;
-      max-width: 600px;
-      width: 100%;
-      /* A gentle float animation for the container */
-      animation: floatyContainer 3s infinite ease-in-out alternate;
-    }
-
-    /* Text Styles */
-    h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      letter-spacing: 1px;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1.2rem;
-      font-weight: 400;
-      opacity: 0.9;
-    }
-
-    /* Adjust text for smaller devices */
-    @media (max-width: 768px) {
-      .container {
-        padding: 30px 20px;
-      }
-      h1 {
-        font-size: 2.2rem;
-      }
-      p {
-        font-size: 1rem;
-      }
-    }
-
-    /* Floaty container animation */
-    @keyframes floatyContainer {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(-15px); }
-    }
-
-    /* Bubble Animation Area */
-    .animation-area {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      overflow: hidden;
-      z-index: 1;
-    }
-    .bubble {
-      position: absolute;
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 50%;
-      bottom: -50px;
-      animation: rise 10s infinite ease-in-out;
-    }
-
-    /* Bubbles rise upward and fade */
-    @keyframes rise {
-      0% {
-        transform: translateY(0) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-100vh) scale(1.5);
-        opacity: 0;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coming Soon | ColorStack at OSU</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: radial-gradient(circle, #C22E2E, #8B1E1E);
+            color: white;
+            text-align: center;
+            overflow: hidden;
+            position: relative;
+            padding: 20px;
+        }
+        .container {
+            position: relative;
+            z-index: 2;
+            padding: 20px;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            animation: floatyText 3s infinite ease-in-out alternate;
+            max-width: 90%;
+        }
+        h1 {
+            font-size: 3rem;
+            font-weight: 800;
+            letter-spacing: 2px;
+        }
+        p {
+            font-size: 1.5rem;
+            opacity: 0.9;
+            margin-top: 15px;
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2.5rem;
+            }
+            p {
+                font-size: 1.2rem;
+            }
+        }
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 2rem;
+            }
+            p {
+                font-size: 1rem;
+            }
+        }
+        @keyframes floatyText {
+            0% { transform: translateY(0px); }
+            100% { transform: translateY(-15px); }
+        }
+        .animation-area {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            overflow: hidden;
+        }
+        .bubble {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            bottom: -50px;
+            animation: rise 10s infinite ease-in-out;
+        }
+        @keyframes rise {
+            0% { transform: translateY(0) scale(1); opacity: 1; }
+            100% { transform: translateY(-100vh) scale(1.5); opacity: 0; }
+        }
+    </style>
 </head>
 <body>
-
-  <!-- Bubble Animation Container -->
-  <div class="animation-area">
-    <script>
-      const animationArea = document.querySelector(".animation-area");
-      for (let i = 0; i < 20; i++) {
-        let bubble = document.createElement("div");
-        bubble.classList.add("bubble");
-        animationArea.appendChild(bubble);
-
-        // Random bubble size
-        const size = Math.random() * 60 + 20; // increased min size for variety
-        bubble.style.width = `${size}px`;
-        bubble.style.height = `${size}px`;
-
-        // Random horizontal position
-        bubble.style.left = `${Math.random() * 100}vw`;
-
-        // Random animation duration
-        bubble.style.animationDuration = `${Math.random() * 5 + 5}s`;
-      }
-    </script>
-  </div>
-
-  <!-- Main Content Container -->
-  <div class="container">
-    <h1>ColorStack @ Ohio State</h1>
-    <p>We're launching soon — stay tuned!</p>
-  </div>
-
+    <div class="animation-area">
+        <script>
+            for (let i = 0; i < 20; i++) {
+                let bubble = document.createElement("div");
+                bubble.classList.add("bubble");
+                document.querySelector(".animation-area").appendChild(bubble);
+                bubble.style.width = `${Math.random() * 50 + 10}px`;
+                bubble.style.height = bubble.style.width;
+                bubble.style.left = `${Math.random() * 100}vw`;
+                bubble.style.animationDuration = `${Math.random() * 5 + 5}s`;
+            }
+        </script>
+    </div>
+    <div class="container">
+        <h1>ColorStack @ Ohio State Website</h1>
+        <p>Coming Soon</p>
+    </div>
 </body>
 </html>
