--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <!-- Main Content Container -->
   <div class="container">
     <h1>ColorStack @ Ohio State</h1>
-    <p>We're launching soon — stay tuned!</p>
+    <p>We're launching soon!</p>
   </div>
 
 </body>
