--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <!-- Main Content Container -->
   <div class="container">
-    <h1>ColorStack @ Ohio State</h1>
+    <h1>ColorStack @ Ohio State University</h1>
     <p>We're launching soon!</p>
   </div>
 
