--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Inter', sans-serif;
     }
 
     body {
@@ -28,8 +28,8 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background: radial-gradient(circle at center, #1a1a1a 0%, #000000 100%);
-      color: #e0e0e0;
+      background: linear-gradient(to bottom, #0e0e0e, #1c1c1c);
+      color: #f0f0f0;
       overflow: hidden;
       position: relative;
       padding: 20px;
@@ -38,44 +38,45 @@
     .container {
       position: relative;
       z-index: 2;
-      background: rgba(30, 30, 30, 0.9);
-      backdrop-filter: blur(10px);
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+      background: rgba(25, 25, 25, 0.85);
+      backdrop-filter: blur(15px);
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
       text-align: center;
-      padding: 40px 30px;
+      padding: 50px 40px;
       max-width: 600px;
       width: 100%;
       animation: floatyContainer 3s infinite ease-in-out alternate;
     }
 
     .logo {
-      width: 120px;
+      width: 100px;
       height: auto;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      opacity: 0.9;
     }
 
     h1 {
-      font-size: 3rem;
-      font-weight: 800;
+      font-size: 2.5rem;
+      font-weight: 700;
       letter-spacing: 1px;
-      margin-bottom: 1rem;
+      margin-bottom: 15px;
       color: #ffffff;
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 400;
-      opacity: 0.9;
-      color: #b0b0b0;
+      opacity: 0.8;
+      color: #c5c5c5;
     }
 
     @media (max-width: 768px) {
       .container {
-        padding: 30px 20px;
+        padding: 35px 25px;
       }
       h1 {
-        font-size: 2.2rem;
+        font-size: 2rem;
       }
       p {
         font-size: 1rem;
@@ -84,7 +85,7 @@
 
     @keyframes floatyContainer {
       0% { transform: translateY(0); }
-      100% { transform: translateY(-15px); }
+      100% { transform: translateY(-10px); }
     }
 
     .animation-area {
@@ -99,10 +100,10 @@
     
     .bubble {
       position: absolute;
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.08);
       border-radius: 50%;
       bottom: -50px;
-      animation: rise 10s infinite ease-in-out;
+      animation: rise 12s infinite ease-in-out;
     }
 
     @keyframes rise {
@@ -111,7 +112,7 @@
         opacity: 1;
       }
       100% {
-        transform: translateY(-100vh) scale(1.5);
+        transform: translateY(-120vh) scale(1.5);
         opacity: 0;
       }
     }
@@ -124,15 +125,15 @@
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const animationArea = document.querySelector(".animation-area");
-      for (let i = 0; i < 20; i++) {
+      for (let i = 0; i < 15; i++) {
         let bubble = document.createElement("div");
         bubble.classList.add("bubble");
         animationArea.appendChild(bubble);
-        const size = Math.random() * 60 + 20;
+        const size = Math.random() * 80 + 20;
         bubble.style.width = `${size}px`;
         bubble.style.height = `${size}px`;
         bubble.style.left = `${Math.random() * 100}vw`;
-        bubble.style.animationDuration = `${Math.random() * 5 + 5}s`;
+        bubble.style.animationDuration = `${Math.random() * 6 + 6}s`;
       }
     });
   </script>
