--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
 
   <div class="container">
     <img src="logo.png" alt="ColorStack Logo" class="logo">
-    <h1>ColorStack @ The Ohio State University</h1>
+    <h1>ColorStack @ OSU</h1>
     <p>We're launching soon!</p>
 
+    <p class="follow-text">Follow Us & Stay Connected</p>
     <div class="social-icons">
       <a href="https://join.slack.com/t/colorstackosu/shared_invite" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111615.png" alt="Slack">
@@ -182,6 +183,7 @@
       <a href="https://www.instagram.com/colorstackosu/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
       </a>
+    </div>    
       
     </div>
   </div>
