--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
   <div class="container">
     <img src="logo.png" alt="ColorStack Logo" class="logo">
-    <h1>ColorStack @ OSU</h1>
+    <h1>ColorStack @ The Ohio State University</h1>
     <p>We're launching soon!</p>
 
     <p class="follow-text">Follow Us & Stay Connected</p>
