--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 
     <p class="follow-text">Follow Us & Stay Connected</p>
     <div class="social-icons">
-      <a href="https://join.slack.com/t/colorstackosu/shared_invite" target="_blank">
+      <a href="https://colorstackosu.slack.com/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111615.png" alt="Slack">
       </a>
-      <a href="https://www.linkedin.com/company/colorstackosu" target="_blank" class="linkedin">
+      <a href="https://www.linkedin.com/company/colorstack-osu/" target="_blank" class="linkedin">
         <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn">
       </a>
       <a href="https://www.instagram.com/colorstackosu/" target="_blank">
