reorganized files and put company collabs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Coming Soon | ColorStack at OSU</title>
 
-  <!-- Meta Tags -->
   <meta property="og:title" content="Coming Soon | ColorStack at OSU">
   <meta property="og:description" content="We're launching soon! Stay tuned for updates.">
   <meta property="og:image" content="assets/logo.png">
@@ -16,33 +15,51 @@
   <meta name="twitter:description" content="We're launching soon! Stay tuned for updates.">
   <meta name="twitter:image" content="assets/logo.png">
 
-  <!-- Stylesheet -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-  <div class="animation-area"></div>
 
   <div class="container">
     <img src="assets/logo.png" alt="ColorStack Logo" class="logo">
     <h1>ColorStack@OSU</h1>
     <p>We're launching soon!</p>
+    <p>Follow Us & Stay Connected</p>
 
-    <p class="follow-text">Follow Us & Stay Connected</p>
     <div class="social-icons">
-      <a href="https://colorstackosu.slack.com/" target="_blank">
+      <a href="https://join.slack.com/t/colorstackosu/shared_invite" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111615.png" alt="Slack">
       </a>
-      <a href="https://www.linkedin.com/company/colorstack-osu/" target="_blank" class="linkedin">
+      <a href="https://www.linkedin.com/company/colorstackosu" target="_blank" class="linkedin">
         <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn">
       </a>
       <a href="https://www.instagram.com/colorstackosu/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
       </a>
-    </div>    
+    </div>
   </div>
 
-  <!-- JavaScript -->
+  <!-- Sponsors Section -->
+  <div class="sponsors-section">
+    <h2>Supported By</h2>
+    <div class="sponsor-track">
+      <div>
+        <img src="assets/adobe.png" alt="Adobe">
+        <img src="assets/ads.png" alt="ADS">
+        <img src="assets/captial-one.png" alt="Capital One">
+        <img src="assets/cardinal-health.png" alt="Cardinal Health">
+        <img src="assets/chase.png" alt="Chase">
+        <img src="assets/godaddy.png" alt="GoDaddy">
+        <img src="assets/mastercard.png" alt="Mastercard">
+        <img src="assets/netflix.png" alt="Netflix">
+        <img src="assets/pg.png" alt="P&G">
+        <img src="assets/pinterest.png" alt="Pinterest">
+        <img src="assets/progressive.png" alt="Progressive">
+        <img src="assets/pwc.png" alt="PwC">
+        <img src="assets/willowtree.png" alt="WillowTree">
+      </div>
+    </div>
+  </div>
+
   <script src="js/script.js"></script>
 </body>
 </html>
