added bubbles back

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<!-- Bubble Animation Background -->
+<div class="animation-area"></div>
 
   <div class="container">
     <img src="assets/logo.png" alt="ColorStack Logo" class="logo">
