--- a/index.html
+++ b/index.html
@@ -40,14 +40,28 @@
     </div>
   </div>
 
-  <!-- Sponsors Section -->
   <div class="sponsors-section">
     <h2>Supported By</h2>
     <div class="sponsor-track">
       <div>
         <img src="assets/adobe.png" alt="Adobe">
         <img src="assets/ads.png" alt="ADS">
-        <img src="assets/captial-one.png" alt="Capital One">
+        <img src="assets/capital-one.png" alt="Capital One">
+        <img src="assets/cardinal-health.png" alt="Cardinal Health">
+        <img src="assets/chase.png" alt="Chase">
+        <img src="assets/godaddy.png" alt="GoDaddy">
+        <img src="assets/mastercard.png" alt="Mastercard">
+        <img src="assets/netflix.png" alt="Netflix">
+        <img src="assets/pg.png" alt="P&G">
+        <img src="assets/pinterest.png" alt="Pinterest">
+        <img src="assets/progressive.png" alt="Progressive">
+        <img src="assets/pwc.png" alt="PwC">
+        <img src="assets/willowtree.png" alt="WillowTree">
+  
+        <!-- Duplicate Logos for Seamless Loop -->
+        <img src="assets/adobe.png" alt="Adobe">
+        <img src="assets/ads.png" alt="ADS">
+        <img src="assets/capital-one.png" alt="Capital One">
         <img src="assets/cardinal-health.png" alt="Cardinal Health">
         <img src="assets/chase.png" alt="Chase">
         <img src="assets/godaddy.png" alt="GoDaddy">
@@ -61,6 +75,7 @@
       </div>
     </div>
   </div>
+  
 
   <script src="js/script.js"></script>
 </body>
