fixed capital one glitch and infintite loop

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div>
         <img src="assets/adobe.png" alt="Adobe">
         <img src="assets/ads.png" alt="ADS">
-        <img src="assets/capital-one.png" alt="Capital One">
+        <img src="assets/captial-one.png" alt="Capital One">
         <img src="assets/cardinal-health.png" alt="Cardinal Health">
         <img src="assets/chase.png" alt="Chase">
         <img src="assets/godaddy.png" alt="GoDaddy">
@@ -61,7 +61,7 @@
         <!-- Duplicate Logos for Seamless Loop -->
         <img src="assets/adobe.png" alt="Adobe">
         <img src="assets/ads.png" alt="ADS">
-        <img src="assets/capital-one.png" alt="Capital One">
+        <img src="assets/captial-one.png" alt="Capital One">
         <img src="assets/cardinal-health.png" alt="Cardinal Health">
         <img src="assets/chase.png" alt="Chase">
         <img src="assets/godaddy.png" alt="GoDaddy">
